# advent-of-code

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .rubocop.yml  .yardopts  Cargo.toml  Gemfile  README.md  Rakefile  aoc.gemspec  flake.nix  init.rb  intcode.rb  pyproject.toml  shell.nix
.config/: .rubocop.yml  mise.toml
2015/02/: first.lua
2015/05/: second.lua
2015/07/: emulator.moon
2015/09/: graph.moon  second.moon
2015/10/: first.moon  lookandsay.moon
2015/11/: tester.moon
2015/12/: reader.moon  tester.moon
2015/17/: tester.moon
2015/20/: tester.moon
2015/day1/: second.lua
2015/day10/: .gitignore  second.moon
2015/day11/: password.moon  solution.moon
2015/day12/: first.moon
2015/day13/: Makefile  manager.moon  solution.moon  tester.moon
2015/day14/: .gitignore  Makefile  race.moon
2015/day15/: engine.moon  first.moon  solution.moon  tester.moon
2015/day16/: mfcsam.moon  solution.moon
2015/day17/: solution.moon
2015/day18/: first.moon  grid.moon  second.moon
2015/day19/: solution.moon
2015/day2/: second.lua
2015/day20/: engine.moon
2015/day21/: solution.moon
2015/day3/: first.lua  second.lua
2015/day4/: engine.lua  first.lua
2015/day5/: first.lua
2015/day6/: first.lua  second.lua
2015/day7/: first.moon  second.moon
2015/day8/: helper.moon
2015/day9/: .gitignore  graph.moon
2016/05/: door.rb
2016/07/: address.rb
2016/09/: solution.rb
2016/13/: solution.rb
2016/14/: solution.rb
2016/17/: solution.rb
2016/18/: solution.rb
2016/day1/: solution.rb
2016/day10/: solution.rb
2020/: utils.rb
aoc_macros/: Cargo.toml
exe/: aoc
lib/: aoc.rb  astar.rb  functions.ts  graph.rb  grid.rb  pqueue.rb
sig/: aoc.rbs
src/: cli.rs  input.rs  intcode.rb  lib.rs  main.rs  registry.rs  y2024.rs
test/: test_astar.rb
(+622 files in other folders)
