[package]
name = "aoc"
# version = "0.1.0"
edition = "2024"
description = "Advent of Code solutions in Rust"
homepage = "https://github.com/Sharparam/advent-of-code"
repository = "https://github.com/Sharparam/advent-of-code"
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
aoc_macros = { path = "aoc_macros" }
ctor = "0.6.0"

[workspace]
members = [".", "aoc_macros"]
