[project]
name = "advent-of-code"
version = "0.1.0"
description = "Sharparam's Python code for AoC"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Adam Hellberg", email = "sharparam@sharparam.com" }]
maintainers = [{ name = "Adam Hellberg", email = "sharparam@sharparam.com" }]

dependencies = [
    "jupyterlab>=4.5.0",
    "networkx[default]>=3.6.1",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "z3-solver>=4.15.4.0",
]
